--- a/src/Components/Home/BookingForm/BookingFrom.css
+++ b/src/Components/Home/BookingForm/BookingFrom.css
@@ -6,46 +6,53 @@
   }
 .book{
  text-align: left;
+ font-size: 30px;
 }
-  .modal{
-    background: gray;
-    height: 250px;
-    width: 400px;
-    margin: 0 auto;
-    padding: 10px 10px 10px 10px;
-    border: 1px solid #FF9800;
-    border-radius: 5px;
-    color: white;
+  .line1{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    text-align: left;
   }
-
-
+.line2{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  text-align: left;
+}
+.line3{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  text-align: left;
+}
   .inquiry-form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
-  form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    margin-top: 2rem;
-  }
-  
+ 
   label {
     font-weight: bold;
   }
   
   input[type="text"],
   input[type="email"],
+  input[type="date"],
+  input[type="time"],
+  input[type="number"],
   textarea {
     width: 100%;
     padding: 0.5rem;
     border: 2px solid #ccc;
     border-radius: 0.25rem;
+    margin-bottom: 10px;
   }
-  
+  .additional{
+    text-align: left;
+    width: 50%;
+  }
   .form-buttons {
     display: flex;
     gap: 1rem;
@@ -53,12 +60,16 @@
   }
   
   button[type="submit"] {
-    background-color: #4caf50;
+    background-color: black;
     color: #fff;
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 0.25rem;
     cursor: pointer;
+    margin-bottom: 20px;
+    height: 50px;
+    width: 150px;
+    font-size: 20px;
   }
   
   button[type="submit"]:hover {
@@ -66,12 +77,16 @@
   }
   
   button[type="button"] {
-    background-color: #f44336;
+    background-color: black;
     color: #fff;
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 0.25rem;
     cursor: pointer;
+    margin-bottom: 0px;
+    height: 50px;
+    width: 150px;
+    font-size: 20px;
   }
   
   button[type="button"]:hover {
@@ -84,7 +99,8 @@
     align-items: center;
     margin-top: 2rem;
     padding: 1rem;
-    background-color: #f0f0f0;
+    background-color: black;
+    
     border-radius: 0.25rem;
   }
   
