--- a/src/Components/Home/Banner/Banner.css
+++ b/src/Components/Home/Banner/Banner.css
@@ -4,7 +4,7 @@
     grid-gap: 20px;
     align-items: center;
     justify-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
   }
   
   .banner img {
@@ -14,7 +14,11 @@
   
   .banner-text {
     text-align: left;
-    margin-left: 80px;
+    margin-left: 40px;
+
+  }
+  .banner-text h2{
+font-size: 50px;
   }
   .banner-text span{
     color: #FF9800 ;
