--- a/src/Components/Home/BookingForm/BookingFrom.css
+++ b/src/Components/Home/BookingForm/BookingFrom.css
@@ -1,8 +1,10 @@
 .form{
     background-color:#FF9800 ;
     color: white;
+    padding-top: 30px;
    padding-left: 30px;
    padding-right: 30px;
+   padding-bottom: 30px;
   }
 .book{
  text-align: left;
@@ -77,7 +79,7 @@
   }
   
   button[type="button"] {
-    background-color: black;
+    background-color: red;
     color: #fff;
     padding: 0.5rem 1rem;
     border: none;
