--- a/src/Components/Home/Footer/Footer.css
+++ b/src/Components/Home/Footer/Footer.css
@@ -35,17 +35,7 @@ section {
     width: 40%;
   }
   
-  /* The company logo */
-  
-  .footer-distributed h3{
-    color:  #ffffff;
-    font: normal 36px 'Open Sans', cursive;
-    margin: 0;
-  }
-  
-  .footer-distributed h3 span{
-    color:  lightseagreen;
-  }
+ 
   
   /* Footer links */
   
@@ -110,7 +100,7 @@ section {
   }
   
   .footer-distributed .footer-center p a{
-    color:  lightseagreen;
+    color:  #FF9800;
     text-decoration: none;;
   }
   
@@ -150,28 +140,8 @@ section {
     margin-bottom: 20px;
   }
   
-  .footer-distributed .footer-icons{
-    margin-top: 25px;
-  }
-  
-  .footer-distributed .footer-icons a{
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    background-color:  #33383b;
-    border-radius: 2px;
-  
-    font-size: 20px;
-    color: #ffffff;
-    text-align: center;
-    line-height: 35px;
-  
-    margin-right: 3px;
-    margin-bottom: 5px;
-  }
-  
-  /* If you don't want the footer to be responsive, remove these media queries */
+ 
+
   
   @media (max-width: 880px) {
   
