--- a/src/Components/Home/Banner/Banner.css
+++ b/src/Components/Home/Banner/Banner.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-items: center;
     margin-bottom: 50px;
+    background-color: #FAF4EA;
   }
   
   .banner img {
