--- a/src/Components/Home/ChooseUs/ChooseUs.css
+++ b/src/Components/Home/ChooseUs/ChooseUs.css
@@ -1,8 +1,8 @@
 
-.choose{
+/* .choose{
     margin-top: 50px;
     margin-bottom: 30px;
-}
+} */
 .us{
     
     border-bottom: 5px solid #FF9800;
@@ -25,11 +25,13 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 10px;
-    align-items: center;
-    justify-content: center;
 margin-left: 60px;
 margin-right: 30px;
+align-items: center;
+justify-content: center;
+margin-bottom: 50px;
 }
+
 .call-out img{
     margin-top: 20px;
 }
@@ -44,7 +46,7 @@ margin-right: 30px;
 
 @media (max-width: 768px) {
     .call-out{
-      grid-template-columns: repeat(1, 1fr);
+      grid-template-columns: repeat(2, 1fr);
       align-items: center;
       justify-content: center;
     }
@@ -52,8 +54,6 @@ margin-right: 30px;
 
   @media screen and (max-width: 600px) {
     .call-out{
-        grid-template-columns: repeat(2, 1fr);
-        align-items: center;
-        justify-content: center;
+        display: none;
       }
   }
