--- a/src/Components/Home/Navbar/Navbar.css
+++ b/src/Components/Home/Navbar/Navbar.css
@@ -17,11 +17,16 @@ nav {
  }
 
   .signup button {
-    padding: 5px 10px;
+    padding: 15px 15px;
     border: none;
     border-radius: 5px;
     background-color: #FF9800;
     color: #fff;
     cursor: pointer;
+    font-size:15px ;
   }
-  
+  a{
+    color: #FF9800;
+    font-size: 20px;
+    text-decoration: none;
+  }
